@@ -1,5 +1,8 @@
 2012-06-01  Frank Warmerdam  <warmerdam@google.com>
 
+	* libtiff/tif_getimage.c: added support for _SEPARATED CMYK images.
+	http://bugzilla.maptools.org/show_bug.cgi?id=2379
+
 	* libtiff/tif_unix.c: use strerror() to return a more specific error message
 	on failed open.
 	http://bugzilla.maptools.org/show_bug.cgi?id=2341
